--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head <link rel="icon" type="image/jpeg" href="/favicon.jpg">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christ Acade Group of School</title>
@@ -20,6 +19,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Correct Favicon Link -->
+    <link rel="icon" type="image/jpeg" href="/favicon.jpg">
   </head>
 
   <body>
@@ -29,3 +31,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
