--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +6,7 @@
     <title>Christ Acade Group of School</title>
     <meta name="description" content="Christ Acade Group of School - Providing quality education with excellence and integrity" />
     <meta name="author" content="Christ Acade Group of School" />
+    <meta name="robots" content="index, follow">
 
     <meta property="og:title" content="Christ Acade Group of School" />
     <meta property="og:description" content="Providing quality education with excellence and integrity" />
