--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <title>Christ Acade Group of School</title>
     <meta name="description" content="Christ Acade Group of School - Providing quality education with excellence and integrity" />
     <meta name="author" content="Christ Acade Group of School" />
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
 
+    <!-- Open Graph Meta Tags (For Facebook, WhatsApp, LinkedIn, etc.) -->
     <meta property="og:title" content="Christ Acade Group of School" />
     <meta property="og:description" content="Providing quality education with excellence and integrity" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/images/school-og.jpg" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:image" content="https://christacadeschools.netlify.app/assets/images/school-og.jpg" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ChristAcade" />
-    <meta name="twitter:image" content="/assets/images/school-og.jpg" />
-    
+    <meta name="twitter:title" content="Christ Acade Group of School" />
+    <meta name="twitter:description" content="Providing quality education with excellence and integrity" />
+    <meta name="twitter:image" content="https://christacadeschools.netlify.app/assets/images/school-og.jpg" />
+
+    <!-- Favicon for Social Media & Browser -->
+    <link rel="icon" type="image/png" href="https://yourwebsite.com/favicon.png" />
+    <link rel="apple-touch-icon" href="https://yourwebsite.com/favicon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Correct Favicon Link -->
-    <link rel="icon" type="image/png" href="/favicon.png">
   </head>
 
   <body>
