--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <meta property="og:description" content="Providing quality education with excellence and integrity" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yourwebsite.com" />
-    <meta property="og:image" content="https://christacadeschools.netlify.app/assets/images/school-og.jpg" />
+    <meta property="og:image" content="https://christacadeschools.netlify.app/assets/images/school-og.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ChristAcade" />
     <meta name="twitter:title" content="Christ Acade Group of School" />
     <meta name="twitter:description" content="Providing quality education with excellence and integrity" />
-    <meta name="twitter:image" content="https://christacadeschools.netlify.app/assets/images/school-og.jpg" />
+    <meta name="twitter:image" content="https://christacadeschools.netlify.app/assets/images/school-og.png" />
 
     <!-- Favicon for Social Media & Browser -->
-    <link rel="icon" type="image/png" href="https://yourwebsite.com/favicon.png" />
-    <link rel="apple-touch-icon" href="https://yourwebsite.com/favicon.png" />
+    <link rel="icon" type="image/png" href="https://christacadeschools.netlify.app/favicon.png" />
+    <link rel="apple-touch-icon" href="https://christacadeschools.netlify.app/favicon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
