--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Christ Acade Group of School - Providing quality education with excellence and integrity" />
     <meta name="author" content="Christ Acade Group of School" />
     <meta name="robots" content="index, follow" />
-
+    <link rel="icon" href="/favicon.png"
+    type="image/png" />
+    
     <!-- Open Graph Meta Tags (For Facebook, WhatsApp, LinkedIn, etc.) -->
     <meta property="og:title" content="Christ Acade Group of School" />
     <meta property="og:description" content="Providing quality education with excellence and integrity" />
