--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Christ Acade Group of School</title>
-    <meta name="description" content="Christ Acade Group of School - Providing quality education with excellence and integrity" />
-    <meta name="author" content="Christ Acade Group of School" />
+    <title>Reachify Promotions</title>
+    <meta name="description" content="Reachify Promotions - Your #1 Social Media Growth Partner. Buy real social media promotion services for Instagram, TikTok, Facebook, and more!" />
+    <meta name="author" content="Reachify Promotions" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="/favicon.png"
-    type="image/png" />
+    <link rel="icon" href="/favicon.jpg" type="image/jpg" />
     
     <!-- Open Graph Meta Tags (For Facebook, WhatsApp, LinkedIn, etc.) -->
-    <meta property="og:title" content="Christ Acade Group of School" />
-    <meta property="og:description" content="Providing quality education with excellence and integrity" />
+    <meta property="og:title" content="Reachify Promotions" />
+    <meta property="og:description" content="Your #1 Social Media Growth Partner. Buy real promotion services for Instagram, TikTok, Facebook, and more!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourwebsite.com" />
-    <meta property="og:image" content="https://christacadeschools.netlify.app/assets/images/school-og.png" />
+    <meta property="og:url" content="https://reachify-promotions.vercel.app" />
+    <meta property="og:image" content="https://reachify-promotions.vercel.app/assets/images/reachify-og.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ChristAcade" />
-    <meta name="twitter:title" content="Christ Acade Group of School" />
-    <meta name="twitter:description" content="Providing quality education with excellence and integrity" />
-    <meta name="twitter:image" content="https://christacadeschools.netlify.app/assets/images/school-og.png" />
+    <meta name="twitter:site" content="@Reachify" />
+    <meta name="twitter:title" content="Reachify Promotions" />
+    <meta name="twitter:description" content="Buy social media promotions for Instagram, TikTok, Facebook & more!" />
+    <meta name="twitter:image" content="https://reachify-promotions.vercel.app/assets/images/reachify-og.png" />
 
     <!-- Favicon for Social Media & Browser -->
-    <link rel="icon" type="image/png" href="https://christacadeschools.netlify.app/favicon.png" />
-    <link rel="apple-touch-icon" href="https://christacadeschools.netlify.app/favicon.png" />
+    <link rel="icon" type="image/png" href="https://reachify-promotions.vercel.app/favicon.jpg" />
+    <link rel="apple-touch-icon" href="https://reachify-promotions.vercel.app/favicon.jpg" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -39,4 +41,5 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-</html>
+      </html>
+      
